Keeping working in Domain layer and Starting unit tests with xUnit

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,15 @@
 /VideogamesStore.Api/Containers/query_db/*
 /VideogamesStore.WorkerService/appsettings.json
 /VideogamesStore.WorkerService/appsettings.Development.json
+/VideogamesStore.Infrastructure/bin/
+/VideogamesStore.Infrastructure/obj/
+/VideogamesStore.Domain/bin/
+/VideogamesStore.Domain/obj/
 /VideogamesStore.Tests/bin/
 /VideogamesStore.Tests/obj/
+/VideogamesStore.Application/bin/
+/VideogamesStore.Application/obj/
+/VideogamesStore.Api/bin/
+/VideogamesStore.Api/obj/
+/VideogamesStore.WorkerService/bin/
+/VideogamesStore.WorkerService/obj/
